# HowsTheWeather

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
Release/HowsTheWeather-v1.4.15/: INSTALL.txt
Release/HowsTheWeather-v1.4.15/AU/HowsTheWeather.component/Contents/: Info.plist
Release/HowsTheWeather-v1.4.15/Standalone/HowsTheWeather.app/Contents/: Info.plist
Release/HowsTheWeather-v1.4.15/VST3/HowsTheWeather.vst3/Contents/: Info.plist
Release/HowsTheWeather-v1.4.15/VST3/HowsTheWeather.vst3/Contents/Resources/: moduleinfo.json
Release/HowsTheWeather-v1.4.15/VST3/HowsTheWeather.vst3/Contents/_CodeSignature/: CodeResources
Source/: DSPAssertions.h  DebugUtils.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  WebViewEditor.cpp  WebViewEditor.h
Source/DSP/: FxEngine.h  HtwAudioBuffer.h  HtwDSPCommon.h  HtwDiffuser.h  HtwGrain.h  HtwGranularPlayer.h  HtwGranularProcessor.h  HtwParameters.h  HtwReverb.h  WeatherService.h
Source/ui/public/: index.html
